--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ h3, h4 {
    display: flex;
    flex-direction: row;
 }
+.flexCenter {
+  align-items: center;
+  justify-content: center;
+}
 #aboutMe > div {
    justify-content: space-between;
    height: 65%;
@@ -141,7 +145,7 @@ nav a {
 }
 .invisible {
    opacity: 0;
-   transition: all 1s linear;
+   /* transition: all 1s linear; */
    color:white;
 }
 .invisible:hover {
@@ -252,16 +256,16 @@ h2 {
    background-image: url("img/gold.jpg");
 }
 .portfolioContainers {
-   -webkit-transition: background-color 2s ease-out;
+   /* -webkit-transition: background-color 2s ease-out;
    -moz-transition: background-color 2s ease-out;
-   -o-transition: background-color 2s ease-out;
-   transition: background-color 2s ease-out;
+   -o-transition: background-color 2s ease-out; */
+   /* transition: background-color 2s ease-out; */
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    width: 30vw;
    height: 30vw;
-   margin: 1%;
+   margin: 1vw;
 }
 .email {
    text-decoration: none;
@@ -296,18 +300,20 @@ h4 {
 .learnMore {
    text-align: center;
    margin: 4%;
-   padding: 4%;
+   padding: 1em;
    width: 33%;
    flex-grow: 1;
    font-size: 1.1em;
-   font-weight: bold;
    background: lightblue;
 }
 .learnMore:hover {
    background: white;
 }
-
-
+@media only screen and (max-width: 1100px) {
+  body {
+    font-size: 0.7em;
+  }
+}
 @media only screen and (max-width: 868px) {
    body {
       font-size: 0.8em;
