--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,34 @@
+/*                       */
+/* Base Rules and Resets */
+/*                       */
 
+html {
+   font-family: Abel, sans-serif;
+}
 h3, h4 {
    margin: 0;
 }
+body, div {
+   margin: 0;
+}
+button {
+   border: 0;
+   border-radius: 0;
+   padding: 0;
+   background: white;
+}
+main {
+   overflow-y: scroll;
+   overflow-x: hidden;
+   height: 100vh;
+   scroll-behavior: smooth;
+   display: block;
+}
+
+/*        */
+/* Layout */
+/*        */
+
 .flex {
    display: flex;
    flex-direction: column;
@@ -16,21 +43,44 @@ h3, h4 {
   align-items: center;
   justify-content: center;
 }
-#aboutMe > div {
-   justify-content: space-between;
-   height: 65%;
-   margin-right: 3%;
+.flex-end {
+   align-self: flex-end;
+}
+
+.l-full-w {
+   width: 100%;
 }
 
 .icon {
    width: 35px;
    height: 35px;
 }
+.sm-icon {
+   margin-right: 3px;
+   width: 20px;
+   height: 20px;
+}
+
+#aboutMe > div {
+   justify-content: space-between;
+   height: 65%;
+   margin-right: 3%;
+}
+#me {
+   width: 35vw;
+   height: 35vw;
+   max-width: 392px;
+   max-height: 392px;
+}
+
+/*      */
+/* Skin */
+/*      */
+
 .blue-h:hover {
    background: lightblue;
 }
-.orange-h:hover {
-   /* background: #eb8c00; */
+.yellow-h:hover {
    background: yellow;
 }
 .border-rounded {
@@ -39,33 +89,19 @@ h3, h4 {
 .border-circle {
    border-radius: 100%;
 }
-html {
-      font-family: Abel;
-}
-
-body, div {
-   margin: 0;
+.sans {
+   font-family: serif !important;
 }
 p {
    font-size: 1.3em;
 }
-button:focus {
-   outline: 0;
-}
-button {
-   border: 0;
-   border-radius: 0;
-   padding: 0;
-   background: white;
+h4 {
+   color: lightblue;
+   font-size: 1.5em;
 }
 
-main {
-   overflow-y: scroll;
-   overflow-x: hidden;
-   height: 100vh;
-   scroll-behavior: smooth;
-   display: block;
-}
+
+
 #scrollContainer {
    display: flex;
    flex-direction: column;
@@ -98,9 +134,6 @@ nav a {
    color: black;
    margin: 1%;
    margin-left: 5%;
-}
-.sans {
-   font-family: serif !important;
 }
 #intro {
    height: 100vh;
@@ -155,13 +188,6 @@ nav a {
    margin: 2%;
    width: 33vw;
 }
-#me {
-   border-radius: 100%;
-   width: 35vw;
-   height: 35vw;
-   max-width: 392px;
-   max-height: 392px;
-}
 h2, h3 {
    text-align: center;
    font-size: 3em;
@@ -182,11 +208,6 @@ h2, h3 {
 h2 {
    margin-top: -10vh;
    padding-top: 10vh;
-}
-.sm-icon {
-   margin-right: 3px;
-   width: 20px;
-   height: 20px;
 }
 #codePortfolio p, #writingPortfolio p {
    margin-bottom: 2%;
@@ -211,7 +232,7 @@ h2 {
    padding-left: 10%;
    padding-right: 10%;
    background-position: center;
-   background-image: linear-gradient(to right, black 0%, darkgrey 30%, darkgrey 70%, black 100%),
+   background-image: linear-gradient(to right, black 0%, black 10%, lightgrey 35%, lightgrey 65%, black 90%, black 100%),
       url("img/avatar2.jpg");
    background-size: auto;
    background-repeat: repeat;
@@ -256,10 +277,6 @@ h2 {
    background-image: url("img/gold.jpg");
 }
 .portfolioContainers {
-   /* -webkit-transition: background-color 2s ease-out;
-   -moz-transition: background-color 2s ease-out;
-   -o-transition: background-color 2s ease-out; */
-   /* transition: background-color 2s ease-out; */
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
@@ -276,26 +293,12 @@ h2 {
 .email img {
    margin-left: 15px;
 }
-h4 {
-   color: lightblue;
-   font-size: 1.5em;
-}
+
 .portfolioContainers:hover {
    background: black !important;
 }
 .relative {
    position: relative;
-}
-.flex-end {
-   align-self: flex-end;
-}
-.l-full-w {
-   width: 100%;
-}
-.curve {
-   float: right;
-   -webkit-shape-outside:circle();
-  shape-outside:circle();
 }
 .learnMore {
    text-align: center;
@@ -309,14 +312,20 @@ h4 {
 .learnMore:hover {
    background: white;
 }
-@media only screen and (max-width: 1100px) {
-  body {
-    font-size: 0.7em;
-  }
-}
-@media only screen and (max-width: 868px) {
+
+/* Media Queries */
+
+@media only screen and (min-width: 769px) and (max-width: 1000px) {
    body {
       font-size: 0.8em;
+   }
+  #introText {
+    font-size: 3.2em;
+  }
+}
+@media only screen and (max-width: 768px) {
+   body {
+      font-size: 0.65em;
    }
    .portfolioContainers {
       width: 50vw;
@@ -327,12 +336,7 @@ h4 {
       display: none;
    }
 }
-@media only screen and (max-width: 768px) {
-   body {
-      font-size: 0.65em;
-   }
-}
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 414px) {
    #aboutMeText {
       width: 50vw;
    }
@@ -347,11 +351,15 @@ h4 {
       font-size: 2.5em;
    }
    .portfolioContainers {
-      font-size: 0.8em;
+      font-size: 1em;
+      width: 70vw;
+      height: 70vw;
    }
    #intro {
-      /* background-image:
-      linear-gradient(to top, black 0%, darkgrey 25%, darkgrey 75%, black 100%),url("img/avatar.jpg"); */
-      background-size: 90vw;
+      background-image:
+      linear-gradient(to top, black 0%, darkgrey 25%, darkgrey 75%, black 100%),
+      url("img/avatar.jpg");
+      background-blend-mode: screen;
+      background-size: 80vw;
    }
 }
