--- a/styles.css
+++ b/styles.css
@@ -342,7 +342,7 @@ h4 {
       height: 50vw;
       font-size: 1.2em;
    }
-   #aboutMe-sidebar {
+   #aboutMeSidebar {
       display: none;
    }
 }
