--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ a:focus, button:focus {
 .hover\:animation-underline::before {
   position: absolute;
   transform: scaleX(0);
-  transition: transform 0.3s linear;
+  transition: transform var(--transition-time) linear;
   transform-origin: left;
   width: 100%;
   height: 1px;
@@ -309,7 +309,7 @@ a:focus, button:focus {
   }
 }
 
-@media screen and (max-width: 735px) {
+@media (max-width: 735px) {
   html {
     font-size: 120%;
   }
@@ -322,7 +322,7 @@ a:focus, button:focus {
   }
 }
 
-@media screen and (max-width: 363px) {
+@media (max-width: 363px) {
   .grid {
     grid-template-columns: 1fr 270px 1fr;
     grid-template-rows: auto 270px 270px 270px 270px;
@@ -340,6 +340,12 @@ a:focus, button:focus {
   }
   #intro h2, #intro span {
     font-size: 1.65rem;
+  }
+}
+
+@media (prefers-reduced-motion) {
+  :root {
+    --transition-time: 0s;
   }
 }
 
